<resources>
    <string name="app_name" translatable="false">ZLauncher</string>
    <string name="lock_layout_description" translatable="false">lock layout description to be used as a unique id to lock screen</string>
    <string name="recents_layout_description" translatable="false">recents layout description to be used as a unique id to show recent apps</string>
    <string name="tag_1" translatable="false">1</string>
    <string name="tag_2" translatable="false">2</string>
    <string name="tag_3" translatable="false">3</string>
    <string name="tag_4" translatable="false">4</string>
    <string name="tag_5" translatable="false">5</string>
    <string name="tag_6" translatable="false">6</string>
    <string name="tag_7" translatable="false">7</string>
    <string name="tag_8" translatable="false">8</string>
    <string name="tag_9" translatable="false">9</string>
    <string name="tag_10" translatable="false">10</string>
    <string name="tag_11" translatable="false">11</string>
    <string name="tag_12" translatable="false">12</string>

    <string name="app">App</string>
    <string name="set_as_default_launcher">Set as default launcher</string>
    <string name="set_as_default_launcher_u"><u>Set as default launcher</u></string>
    <string name="please_set_zlauncher_as_default_first">Please set ZLauncher as default first</string>
    <string name="double_tap_to_lock_screen">Double tap to lock</string>
    <string name="home_button_show_recents">Home button for recents</string>
    <string name="admin_permission_message">ZLauncher uses the device admin permission only to lock the screen. No data is collected.</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="change_default_launcher">Change default launcher</string>
    <string name="privacy">Privacy</string>
    <string name="github">GitHub</string>
    <string name="swipe_for_widgets_apps_settings">Swipe left for apps, right for widgets, long press for settings</string>
    <string name="apps_on_home_screen">Apps on home screen</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="center">Center</string>
    <string name="home_layout_alignment">App alignment</string>
    <string name="bottom_corner_left_app">Bottom left app</string>
    <string name="bottom_corner_right_app">Bottom right app</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="okay">Okay</string>
    <string name="hide">Hide</string>
    <string name="status_bar">Status bar on top</string>
    <string name="rename">Rename</string>
    <string name="show_date_time">Show date time</string>
    <string name="appearance">Appearance</string>
    <string name="gestures">Gestures</string>
    <string name="theme_mode">Theme mode</string>
    <string name="system_default">System</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="accessibility_service_description">The accessibility permission is required to enable double tap to lock and home button to show recent apps. Any data accessed via this service stays on your device.</string>
    <string name="close">Close</string>
    <string name="date">Date</string>
    <string name="date_only">Date only</string>
    <string name="bottom_on">Bottom: On</string>
    <string name="bottom_off">Bottom: Off</string>
    <string name="hidden_apps">Hidden apps</string>
    <string name="hidden_apps_message">Tip: tap the ZLauncher header in Settings to find your hidden apps.</string>
    <string name="swipe_down_for">Swipe down for</string>
    <string name="search">Search</string>
    <string name="search_apps">Search apps</string>
    <string name="notifications">Notifications</string>
    <string name="accessibility_disclosure">Please turn on ZLauncher\'s accessibility service in your device\'s settings to enable Double tap to lock or Home button for recent apps gestures.\n\nThis service is only used for these gestures and does not collect or share any data.</string>
    <string name="permission">Permission</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="info">Info</string>
    <string name="delete">Uninstall</string>
    <string name="text_size">Text size</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="please_turn_on_double_tap_to_unlock">Please turn on double tap to lock</string>
    <string name="launcher_failed_to_lock_device">ZLauncher failed to lock device.\nPlease check your app settings.</string>
    <string name="long_press_to_select_app">Long press to select app</string>
    <string name="unable_to_open_app">Unable to open app</string>
    <string name="system_app_cannot_delete">System app, cannot delete</string>
    <string name="type_a_new_app_name_first">Type a new app name first</string>
    <string name="app_not_found">App not found</string>
    <string name="adapter_show">Show</string>
    <string name="adapter_hide">Hide</string>
    <string name="alignment_changed">Alignment changed</string>
    <string name="home_screen">Home screen</string>
    <string name="notification_bar">Notification bar</string>
    <string name="private_space">Private space</string>
    <string name="no_hidden_apps">No hidden apps</string>

    <!-- Widgets -->
    <string name="widgets">Widgets</string>
    <string name="weather">Weather</string>
    <string name="weather_loading">Loading weather…</string>
    <string name="weather_unavailable">Weather unavailable</string>
    <string name="weather_location_needed">Tap to enable location for weather</string>
    <string name="weather_location_denied">Location permission denied</string>
    <string name="weather_app_set">Weather app set</string>
    <string name="weather_app_cleared">Weather app cleared</string>
    <string name="weather_set_app_hint">Long press the weather widget to choose a weather app</string>
    <string name="weather_summary" formatted="false" translatable="false">%1$s  %2$d\u00B0  %3$s</string>
    <string name="weather_summary_no_location" formatted="false" translatable="false">%1$s  %2$d\u00B0</string>
    <string name="todo">To-do</string>
    <string name="todo_add_hint">Add task…</string>

    <!-- Drawer search button -->
    <string name="search_apps_hint">Search</string>

    <!-- Content descriptions -->
    <string name="cd_search">Search</string>
    <string name="cd_bottom_left_app">Bottom left app</string>
    <string name="cd_bottom_right_app">Bottom right app</string>
    <string name="cd_scrubber_reset">Show all apps</string>
    <string name="cd_weather_refresh">Refresh weather</string>
</resources>
