<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ui.HomeFragment">

    <!-- Placeholder views consumed by the accessibility service to lock / show recents -->
    <FrameLayout
        android:id="@+id/lock"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:contentDescription="@string/lock_layout_description" />

    <FrameLayout
        android:id="@+id/recents"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:contentDescription="@string/recents_layout_description" />

    <!-- Clock and calendar -->
    <LinearLayout
        android:id="@+id/dateTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextClock
            android:id="@+id/clock"
            style="@style/TextDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:format12Hour="h:mm"
            android:textSize="@dimen/time_size"
            tools:text="02:34" />

        <TextView
            android:id="@+id/date"
            style="@style/TextDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="3dp"
            android:textSize="@dimen/date_size"
            tools:text="Monday, January 12" />

        <TextView
            android:id="@+id/battery"
            style="@style/TextDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="3dp"
            android:textSize="@dimen/date_size"
            tools:text="75%" />
    </LinearLayout>

    <!-- Home apps -->
    <LinearLayout
        android:id="@+id/homeAppsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingTop="112dp"
        android:paddingBottom="120dp">

        <TextView
            android:id="@+id/homeApp1"
            style="@style/TextLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_1"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/homeApp2"
            style="@style/TextLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_2"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/homeApp3"
            style="@style/TextLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_3"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/homeApp4"
            style="@style/TextLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_4"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/homeApp5"
            style="@style/TextLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_5"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/homeApp6"
            style="@style/TextLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_6"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/homeApp7"
            style="@style/TextLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_7"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/homeApp8"
            style="@style/TextLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_8"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

    <TextView
        android:id="@+id/firstRunTips"
        style="@style/TextSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:text="@string/swipe_for_widgets_apps_settings"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/setDefaultLauncher"
        style="@style/TextMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="120dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/set_as_default_launcher_u"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/cornerLeftButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="32dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_bottom_left_app"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_phone" />

    <ImageButton
        android:id="@+id/cornerRightButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="32dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_bottom_right_app"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_camera" />
</FrameLayout>
